--- a/src/client/styles/SideBar.scss
+++ b/src/client/styles/SideBar.scss
@@ -6,16 +6,30 @@
   left: -260px;
   background: #ddd;
   transition: left 0.3s linear;
-  padding: 20px;
+  padding: 50px;
+
+  &__input, &__button {
+
+    input {
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 5px;
+    }
+  }
+
+  &__input {
+    margin-top: 100px;
+
+    input[type='text'] {
+      width: 100%;
+    }
+  }
 
   &__button {
     display: table;
-    margin: 100px auto;
+    margin: 50px auto;
 
-    button {
-      border: 1px solid #ccc;
-      padding: 5px;
-      border-radius: 5px;
+    input[type='submit'] {
       cursor: pointer;
     }
   }
