--- a/src/client/styles/App.scss
+++ b/src/client/styles/App.scss
@@ -4,6 +4,11 @@
 
   &__tabs {
     margin-top: 50px;
-    padding: 50px;
+    padding: 50px 10px;
   }
 }
+
+.react-tabs__tab {
+  font-size: 20px;
+}
+
