added inner tabs

--- a/src/client/styles/Button.scss
+++ b/src/client/styles/Button.scss
@@ -1,6 +1,6 @@
 .button {
-  background: #393E41;
-  color: #E2C044;
+  color: #393E41;
+  background: #E2C044;
   text-transform: uppercase;
   padding: 10px 20px;
   border-radius: 5px;
