--- a/src/client/styles/Tab/InnerTabPanel.scss
+++ b/src/client/styles/Tab/InnerTabPanel.scss
@@ -1,10 +1,9 @@
 .inner-tab-panel {
   width: 100%;
   height: 100%;
-  padding: 20px;
-  background:#393E41;
+  // background:#393E41;
+  background: #232323;
   color: #E2C044;
-  box-shadow: inset -1px -2px 15px (#393E41 - 50);
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   overflow: hidden;
