--- a/src/client/styles/Tab/TabMenuItem.scss
+++ b/src/client/styles/Tab/TabMenuItem.scss
@@ -1,4 +1,5 @@
 .tab-menu-item {
+  position: relative;
   width: 100%;
   height: 60px;
   flex: 1 1 auto;
@@ -23,6 +24,19 @@
   &:hover {
     transform: translate(0, 15px);
   }
+
+  &__icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+
+    svg {
+      width: 10px;
+      height: 10px;
+      fill: #E2C044;
+      stroke: #E2C044;
+    }
+  }
 }
 
 //State 
@@ -30,7 +44,7 @@
 
   &--active {
     transform: translate(0, 10px);
-    box-shadow: 2px 3px 6px 2px (#393E41 - 30);
+    box-shadow: 2px 5px 6px 2px (#393E41 - 30);
     z-index: 1;
     color: #393E41;
     background: #E2C044;
@@ -38,5 +52,16 @@
     &:hover {
       transform: translate(0, 10px);
     }
-  }  
+  } 
+  
+  &--active & {
+
+    &__icon {
+
+      svg {
+        fill: #393E41;
+        stroke: #393E41;
+      }
+    }
+  }
 }
