--- a/src/client/styles/Tab/TabMenuItem.scss
+++ b/src/client/styles/Tab/TabMenuItem.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 60px;
   flex: 1 1 auto;
-  padding: 10px 20px;
+  padding: 15px 20px 20px 20px;
   text-align: center;
   background: #393E41;
   color: #E2C044;
@@ -36,6 +36,7 @@
       fill: #E2C044;
       stroke: #E2C044;
       pointer-events: none;
+      transition: fill 0.2s ease-in-out, stroke 0.2s ease-in-out;
     }
   }
 }
