--- a/src/client/styles/Tab/TabPanel.scss
+++ b/src/client/styles/Tab/TabPanel.scss
@@ -1,5 +1,6 @@
 .tab-panel {
   display: none;
+  width: 100%;
   padding: 34px 20px;
   background: #1D1D1B;
   border-bottom-left-radius: 8px;
@@ -49,25 +50,9 @@
   }
 
   &__right {
-    flex: 1 1 auto;
     width: 100%;
     padding: 0 30px;
-
-    &__tabs {
-      display: flex;
-
-      &__item {
-        flex: 1 1 auto;
-        padding: 20px;
-        background: #393E41;
-        color: #E2C044;
-        text-transform: uppercase;
-
-        &--clicked {
-          transform: scale(1.5);
-        }
-      }
-    }
+    overflow-x: auto;
   }
 }
 
