--- a/src/client/styles/Modal.scss
+++ b/src/client/styles/Modal.scss
@@ -4,20 +4,21 @@
   left: 0;
   width:100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 4;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 6;
   
 
   &__main {
     position: fixed;
-    background: #E2C044;
     width: 80%;
     height: auto;
     top:50%;
     left:50%;
     padding: 50px;
-    transform: translate(-50%,-50%);
+    background: #393E41;
+    border: 1px solid #E2C044;
     border-radius: 20px;
+    transform: translate(-50%,-50%);
 
     &__button {
 
@@ -30,12 +31,6 @@
 
     &__input {
       width: 100%;
-
-      input {
-        width: 100%;
-        padding: 5px;
-        border-radius: 3px;
-      }
     }
   }
 }
