--- a/src/client/styles/App.scss
+++ b/src/client/styles/App.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 .app {
   width: 100%;
   position: relative;
+  font-family: 'Montserrat', sans-serif;
 
   &__tabs {
     margin-top: 50px;
