--- a/src/client/styles/MessageComp.scss
+++ b/src/client/styles/MessageComp.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.loading-comp {
+.message-comp {
   position: fixed;
   top: 0;
   left: 0;
@@ -27,7 +27,7 @@
       color: #E2C044;
     }
   
-    &__spinner {
+    &__button {
       display: table;
       margin: 30px auto;
   
@@ -37,6 +37,15 @@
         fill: #E2C044;
         stroke: #E2C044;
         animation: rotate 5s infinite;
+      }
+
+      button {
+        padding: 5px;
+        font-size: 16px;
+        border: 1px solid #E2C044;
+        color: #E2C044;
+        border-radius: 5px;
+        background: transparent;
       }
     }
   }
