--- a/src/client/styles/TopNavBar.scss
+++ b/src/client/styles/TopNavBar.scss
@@ -2,9 +2,11 @@
   width: 100%;
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   background: #1D1D1B;
   padding: 20px;
-  z-index: 7;
+  z-index: 5;
 }
 
 
