--- a/src/client/styles/MessageComp.scss
+++ b/src/client/styles/MessageComp.scss
@@ -15,7 +15,7 @@
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
-  z-index: 6;
+  z-index: 9999;
 
   &__main {
     position: absolute;
@@ -40,12 +40,13 @@
       }
 
       button {
-        padding: 5px;
-        font-size: 16px;
+        padding: 10px;
+        font-size: 14px;
         border: 1px solid #E2C044;
         color: #E2C044;
         border-radius: 5px;
         background: transparent;
+        outline: transparent;
       }
     }
   }
