add sass resources loader

--- a/src/client/styles/Button.scss
+++ b/src/client/styles/Button.scss
@@ -1,6 +1,6 @@
 .button {
-  color: #393E41;
-  background: #E2C044;
+  color: $color-grey;
+  background: $color-yellow;
   text-transform: uppercase;
   padding: 10px 20px;
   border-radius: 5px;
