--- a/src/client/styles/Tab/TabPanel.scss
+++ b/src/client/styles/Tab/TabPanel.scss
@@ -2,7 +2,7 @@
   display: none;
   width: 100%;
   padding: 34px 0 20px 15px;
-  background: #1D1D1B;
+  background: $color-black;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 
