--- a/src/client/styles/variables.scss
+++ b/src/client/styles/variables.scss
@@ -1,2 +1,7 @@
 //Colors
 $color-yellow: #E2C044;
+$color-black: #1D1D1B;
+$color-light-grey: #D3D0CB;
+$color-grey: #393E41;
+$color-dark-grey: #232323;
+$color-white: #fff;
