--- a/src/client/styles/Icon.scss
+++ b/src/client/styles/Icon.scss
@@ -5,8 +5,8 @@
     width: 1.5em;
     height: 1.5em;
     stroke-width: 0;
-    stroke: #E2C044;
-    fill: #E2C044;
+    stroke: $color-yellow;
+    fill: $color-yellow;
     pointer-events: none;
   }
 }
