--- a/src/client/styles/Modal.scss
+++ b/src/client/styles/Modal.scss
@@ -15,8 +15,8 @@
     top:50%;
     left:50%;
     padding: 50px;
-    background: #393E41;
-    border: 1px solid #E2C044;
+    background: $color-grey;
+    border: 1px solid $color-yellow;
     border-radius: 20px;
     transform: translate(-50%,-50%);
 
@@ -25,7 +25,7 @@
       svg {
         width: 20px;
         height: 20px;
-        fill: #393E41;
+        fill: $color-grey;
       }
     }
 
