--- a/src/client/styles/SideBar.scss
+++ b/src/client/styles/SideBar.scss
@@ -1,22 +1,22 @@
 .side-bar {
   width: 100%;
   padding: 10px 0;
-  background: #000;
+  background: ($color-black - 30);
   
   &__item {
     width: 100%;
     padding: 20px;
-    background: #000;
-    color: #E2C044;
+    background: ($color-black - 30);
+    color: $color-yellow;
     text-transform: uppercase;
-    border-bottom: 1px solid #E2C044;
-    border-top: 1px solid #E2C044;
+    border-bottom: 1px solid $color-yellow;
+    border-top: 1px solid $color-yellow;
     transition: background 0.2s, color 0.2s;
     cursor: pointer;
 
     &:hover {
-      background: #E2C044;
-      color: #000;
+      background: $color-yellow;
+      color: ($color-black - 30);
     }
   }
 }
