--- a/src/client/styles/Tab/InnerTabPanel.scss
+++ b/src/client/styles/Tab/InnerTabPanel.scss
@@ -1,8 +1,8 @@
 .inner-tab-panel {
   width: 100%;
   height: 100%;
-  background: #232323;
-  color: #E2C044;
+  background: $color-dark-grey;
+  color: $color-yellow;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   overflow: hidden;
