--- a/src/client/styles/variables.scss
+++ b/src/client/styles/variables.scss
@@ -1,7 +1,8 @@
 //Colors
-$color-yellow: #E2C044;
+$color-green: #88F87B;
+$color-light-green: #E1FDDE;
 $color-black: #1D1D1B;
-$color-light-grey: #D3D0CB;
+$color-light-grey: #B7B7B7;
 $color-grey: #393E41;
 $color-dark-grey: #232323;
 $color-white: #fff;
