--- a/src/client/styles/Button.scss
+++ b/src/client/styles/Button.scss
@@ -1,6 +1,6 @@
 .button {
   color: $color-grey;
-  background: $color-yellow;
+  background: $color-green;
   text-transform: uppercase;
   padding: 10px 20px;
   border-radius: 5px;
