--- a/src/client/styles/Modal.scss
+++ b/src/client/styles/Modal.scss
@@ -15,17 +15,27 @@
     top:50%;
     left:50%;
     padding: 50px;
-    background: $color-grey;
-    border: 1px solid $color-yellow;
-    border-radius: 20px;
+    background: $color-dark-grey;
+    box-shadow: 0.3px 0.4px 12px 0px $color-light-green;
+    border-radius: 12px;
     transform: translate(-50%,-50%);
 
     &__button {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+
+      button {
+        background: transparent;
+        outline: transparent;
+        cursor: pointer;
+      }
 
       svg {
-        width: 20px;
-        height: 20px;
-        fill: $color-grey;
+        width: 10px;
+        height: 10px;
+        stroke: $color-light-grey;
+        fill: $color-light-grey;
       }
     }
 
