--- a/src/client/styles/SideBar.scss
+++ b/src/client/styles/SideBar.scss
@@ -1,22 +1,22 @@
 .side-bar {
   width: 100%;
   padding: 10px 0;
-  background: ($color-black - 30);
+  background: $color-dark-grey;
   
   &__item {
     width: 100%;
     padding: 20px;
-    background: ($color-black - 30);
-    color: $color-yellow;
+    background: $color-dark-grey;
+    color: $color-green;
     text-transform: uppercase;
-    border-bottom: 1px solid $color-yellow;
-    border-top: 1px solid $color-yellow;
+    border-bottom: 1px solid $color-green;
+    border-top: 1px solid $color-green;
     transition: background 0.2s, color 0.2s;
     cursor: pointer;
 
     &:hover {
-      background: $color-yellow;
-      color: ($color-black - 30);
+      background: $color-green;
+      color: $color-dark-grey;
     }
   }
 }
