--- a/src/client/styles/Tab/InnerTabPanel.scss
+++ b/src/client/styles/Tab/InnerTabPanel.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   background: $color-dark-grey;
-  color: $color-yellow;
+  color: $color-green;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   overflow: hidden;
