--- a/src/client/styles/Tab/TabPanel.scss
+++ b/src/client/styles/Tab/TabPanel.scss
@@ -13,7 +13,7 @@
 
     &__control {
       position: absolute;
-      top: 0;
+      top: -22px;
       left: 0;
       z-index: 4;
 
@@ -26,8 +26,8 @@
 
     &__side-bar {
       position: absolute;
-      opacity: 0;
-      transition: opacity 0.1s;
+      left: -262px;
+      transition: left 0.2s;
       pointer-events: none;
     }
   }
@@ -53,7 +53,7 @@
     &__side-bar {
 
       &--open {
-        opacity: 1;
+        left: -13px;
         z-index: 6;
         pointer-events: auto;
       }
