--- a/src/client/styles/TopNavBar.scss
+++ b/src/client/styles/TopNavBar.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background: $color-black;
+  background: $color-dark-grey;
   padding: 20px;
   z-index: 5;
 }
