toggle message visibility with redux

--- a/src/client/styles/EVMState.scss
+++ b/src/client/styles/EVMState.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+
 .evm-state {
-  color: $color-white;
   padding-top: 10px;
+  color: $color-light-grey;    
 
   &__item {
     padding: 10px 0;
@@ -9,6 +11,7 @@
       margin-top: 5px;
             
       span {
+        font-family: 'Orbitron', sans-serif;
         word-break: break-all;
       }
     }
