--- a/src/client/styles/variables.scss
+++ b/src/client/styles/variables.scss
@@ -1,6 +1,6 @@
 //Colors
 $color-green: #88F87B;
-$color-light-green: #E1FDDE;
+$color-light-green: #B4FAAC;
 $color-black: #1D1D1B;
 $color-light-grey: #B7B7B7;
 $color-grey: #393E41;
