--- a/src/client/styles/MessageComp.scss
+++ b/src/client/styles/MessageComp.scss
@@ -30,15 +30,31 @@
         animation: rotate 5s infinite;
       }
 
-      button {
-        padding: 10px;
-        font-size: 14px;
-        border: 1px solid $color-green;
-        color: $color-green;
-        border-radius: 5px;
-        background: transparent;
-        outline: transparent;
-        cursor: pointer;
+      &__item {
+        
+        button {
+          padding: 10px;
+          font-size: 14px;
+          border: 1px solid $color-green;
+          border-radius: 5px;
+          background: transparent;
+          outline: transparent;
+          cursor: pointer;
+
+          &:hover {
+            opacity: 0.6;
+          }
+        }
+
+        span {
+          color: $color-green;
+          font-size: 16px;
+        }
+
+        .escape {
+          margin-left: 7px;
+          font-size: 22px;
+        }
       }
     }
   }
