--- a/src/client/styles/SideBar.scss
+++ b/src/client/styles/SideBar.scss
@@ -1,12 +1,12 @@
 .side-bar {
   width: 100%;
   padding: 10px 0;
-  background: $color-dark-grey;
+  background: $color-grey;
   
   &__item {
     width: 100%;
     padding: 20px;
-    background: $color-dark-grey;
+    //background: $color-dark-grey;
     color: $color-green;
     text-transform: uppercase;
     border-bottom: 1px solid $color-green;
