--- a/src/client/styles/TopNavBar.scss
+++ b/src/client/styles/TopNavBar.scss
@@ -1,4 +1,6 @@
-.top-nav-bar {
+.top-navbar {
+  display: flex;
+  align-items: center;
   width: 100%;
   position: fixed;
   top: 0;
@@ -7,6 +9,15 @@
   background: $color-dark-grey;
   padding: 20px;
   z-index: 5;
+
+  &__input {
+    flex: 1 1 auto;
+  }
+
+  &__icon {
+    padding-left: 25px;
+    cursor: pointer;
+  }
 }
 
 
