--- a/src/client/styles/Input.scss
+++ b/src/client/styles/Input.scss
@@ -3,6 +3,14 @@
 
   &__item {
 
+    &:first-of-type {
+      flex: 1 1 auto;
+    }
+
+    &:last-of-type {
+      margin-left: 10px;
+    }
+
     input {
       padding: 10px;
       font-size: 14px;
@@ -16,6 +24,13 @@
       width: 100%;
       background: transparent;
       color: $color-light-grey;
+      border-bottom: 1px dotted $color-light-grey;
+      transition: border-color 0.2s;
+
+      &:focus, {
+        border-color: $color-green;
+        outline: 0 none;
+      }
     }
 
     input[type='submit'] {
@@ -24,19 +39,17 @@
       background: transparent;
       color: $color-light-grey;
       cursor: pointer;
+      transition: opacity 0.2s, border-color 0.2s, color 0.2s;
 
       &:hover {
         opacity: 0.7;
       }
-    }
 
-    &:first-of-type {
-      flex: 1 1 auto;
-      border-bottom: 1px solid $color-light-grey;
-    }
-
-    &:last-of-type {
-      margin-left: 10px;
+      &:focus {
+        border-color: $color-green;
+        color: $color-green;
+        outline: 0 none;
+      }
     }
   }
 }
