--- a/src/client/styles/Operations.scss
+++ b/src/client/styles/Operations.scss
@@ -3,9 +3,11 @@
   justify-content: flex-start;
 
   &__item {
+    flex: 0 0 170px;
+    text-align: left;
 
-    &:not(:first-of-type) {
-      padding-left: 20px;
+    span {
+      word-break: break-all;
     }
   }
 }
