--- a/src/client/styles/SettingsBar.scss
+++ b/src/client/styles/SettingsBar.scss
@@ -1,8 +1,8 @@
-.settings-sidebar {
+.settings-bar {
   width: 50%;
   background: $color-dark-grey;
   position: absolute;
-  padding: 0 30px;
+  padding: 0 30px 5px 0;
   top: -287px;
   right: 0;
   transition: top 0.3s;
